# ChangeLog for net-misc/rdesktop
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/ChangeLog,v 1.73 2006/12/26 13:18:13 drizzt Exp $

  26 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  rdesktop-1.5.0-r1.ebuild:
  Add ~x86-fbsd keyword.

*rdesktop-1.5.0-r1 (05 Oct 2006)

  05 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +rdesktop-1.5.0-r1.ebuild:
  Revision bump to add libao support to our rdesktop ebuild. Ebuild by Oldrich
  Jedlicka <oldium.pro@seznam.cz>. Closing bug #150092.

*rdesktop-1.5.0 (13 Sep 2006)

  13 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -rdesktop-1.5.0_rc1.ebuild, +rdesktop-1.5.0.ebuild:
  Version bump.

  22 Jul 2006; <psi29a@gentoo.org> rdesktop-1.4.1.ebuild:
  stable on mips

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  rdesktop-1.5.0_rc1.ebuild:
  Fix the sed for strip on 1.5.0_rc1. Thanks go to Jakub Moc
  <jakub@gentoo.org> for finding it and providing the fix. Closing bug
  #125545.

*rdesktop-1.5.0_rc1 (05 Jul 2006)

  05 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +rdesktop-1.5.0_rc1.ebuild:
  Version bump to 1.5.0_rc1 for testing.

  13 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Changed to no-herd for bug #94878.

  14 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> rdesktop-1.4.1.ebuild:
  Adjusted modular X dependencies.

  16 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> rdesktop-1.4.1.ebuild:
  Added sed fix from Flameeyes and closing bug #125545.

  13 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  rdesktop-1.4.1.ebuild:
  Add modular X dependencies.

  27 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -files/rdesktop-1.3.1-kde.patch,
  -files/rdesktop-1.4.0-configure-with_arg.patch, -rdesktop-1.3.1-r1.ebuild,
  -rdesktop-1.4.0-r1.ebuild:
  Cleaning up older ebuilds.

  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> rdesktop-1.4.1.ebuild:
  Stable on hppa.
