@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/rdesktop
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/ChangeLog,v 1.73 2006/12/26 13:18:13 drizzt Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdesktop/ChangeLog,v 1.74 2007/01/09 19:38:23 grobian Exp $
+
+  09 Jan 2007; Fabian Groffen <grobian@gentoo.org> rdesktop-1.4.1.ebuild,
+  rdesktop-1.5.0.ebuild, rdesktop-1.5.0-r1.ebuild:
+  Dropped ppc-macos keyword
 
   26 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
   rdesktop-1.5.0-r1.ebuild:
